07-02-06 mfp. Added ability for parser and tree walker to deal with
    creating untracked parameters of type ParameterSet. Added
    tests to the test suite to verify correct behavior. Removed
    another wrong test which had required failure when attempting
    to make an empty ParameterSet.

06-02-06 mfp. Add tests of generation of ParameterSetID.
    Added tests to verify that modification of untracked parameters
    does *not* cause a change in ParameterSetID, but addition
    of a (tracked) parameter *does* change the ParameterSetID.

03-02-06 mfp. More fixing of mis-handled untracked/tracked
   differentiation.

    Removed 'ValueError' and 'EntryError' classes, in favor of use of
    edm::Exception.

    Fixed mixing of untracked and tracked parameters.
    Fixed tests to reflect correct behavior.

02-02-06 mfp. Removed default c'tor for Entry class.

02-02-06 mfp. Starting to fix long-standing mishandling of untracked
   parameters. Removed check for 'label' entry in the ParameterSet's
   table; this seems to have been a leftover from a previous
   misunderstanding regarding ParameterSet objects having names. This
   was also probably the source of the (defunct) error messages
   regarding 'anonymous parameter sets'.

31-01-06 mfp. Remove unnecessary rejection of empty parameter sets
   from MakersProcess.cc
   Add test for overriding 'used' blocks and PSets; test is commented
   out because the current code fails! The test/sample.txt file is
   correct in its use. The failure is not in the parser, but in the tree
   walker code.

17-01-06 mfp. Added protection to prevent circular inclusion.
   Also made EdmConfigToPython use preprocesser.

17-01-06 mfp. Added 'include' functionality, via use of
    preprocessor. Also modified the lexer/parser to disallow
    multi-line strings, which (up to very recently) were not
    working correctly anyway. This was done in order to make
    the preprocessing simpler to understand, and so that the